<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="18dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="165dp">

            <ImageView
                android:id="@+id/iv_cloud_welcome_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cloud_welcome_featured_accessibility" />

            <TextView
                android:id="@+id/tv_cloud_welcome_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_margin="12dp"
                android:background="@drawable/bg_cloud_welcome_badge"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/cloud_welcome_recommendation"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_cloud_welcome_tap_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_cloud_welcome_badge"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/cloud_welcome_tap_hint"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <ImageView
                android:id="@+id/iv_cloud_welcome_close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="top|right"
                android:layout_margin="12dp"
                android:background="@drawable/bg_cloud_welcome_close"
                android:padding="7dp"
                android:src="@drawable/ic_cloud_welcome_close"
                android:contentDescription="@string/cloud_welcome_close" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_cloud_welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cloud_welcome_title"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cloud_welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cloud_welcome_message"
                android:textColor="#666666"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_cloud_welcome_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cloud_welcome_source_notice"
                android:textColor="#999999"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/btn_cloud_welcome_more"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_cloud_welcome_button"
                android:gravity="center"
                android:text="@string/cloud_welcome_more"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
