<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip">

        <AutoCompleteTextView
            android:id="@+id/keyWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_search"
            android:completionThreshold="1"
            android:dropDownVerticalOffset="1.0dip"
            android:hint="@string/inputsearchplace"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:maxLength="20"
            android:paddingRight="37.0dip"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@color/darkgrey"
            android:textSize="14.0sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="1"
            android:background="@drawable/text_search"
            android:hint="@string/inputcity"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@color/darkgrey"
            android:textSize="14.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beginsearch" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nextpage" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.amap.api.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>