<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/ll_quanjian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/cl_head_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/quanjing_left"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/quanjing_left"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/amap_car"
            android:gravity="center"
            android:text="99+"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:background="#9a9a9a"
        android:id="@+id/tv01"
        app:layout_constraintTop_toBottomOf="@+id/ll_quanjian"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <LinearLayout
        android:id="@+id/ll_weather_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/weather_left"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/weather_left"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/amap_car"
            android:gravity="center"
            android:text="99+"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:background="#9a9a9a"
        android:id="@+id/tv02"
        app:layout_constraintTop_toBottomOf="@+id/ll_weather_left"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <LinearLayout
        android:id="@+id/ll_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/service"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/serviceprotocol"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/msg_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/amap_car"
            android:gravity="center"
            android:text="99+"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>
    <TextView
        android:background="#9a9a9a"
        android:id="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/ll_service"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />
    <LinearLayout

        android:id="@+id/ll_yinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/yinsipro"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/yinsipolicyprotocol"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv2"
        android:background="#9a9a9a"
        app:layout_constraintTop_toBottomOf="@+id/ll_yinsi"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />
    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/tel"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/userfeedback"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv3"
        android:background="#9a9a9a"
        app:layout_constraintTop_toBottomOf="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />
    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/tv3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/gps"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/maptype"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_map_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/ll_about">
        <LinearLayout
            android:id="@+id/ll_satellite"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_satellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/satellite_select"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/satellitemap"></TextView>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/map_mode_normal"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/normalmap"></TextView>
        </LinearLayout>



        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_bus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/map_mode_bus"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/busmap"></TextView>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv4"
        android:background="#9a9a9a"
        app:layout_constraintTop_toBottomOf="@+id/ll_map_select"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mylocation"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/ll_location"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/banner_container"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
        android:background="#ffffff"
        tools:ignore="MissingConstraints" />
    <FrameLayout
        android:id="@+id/express_2_ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/banner_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_head_view"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/icon_trans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_head" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>